# ember

./: .gitignore  ARTIFACT_STATUS.md  BUGS.md  CITATION.cff  Cargo.toml  LICENSE  README.md  REPRODUCIBILITY.md  bugs.md  pyproject.toml
configs/: arabic_morph_disambig_padt_5000_strict.toml  arabic_morph_imbalanced_sample.toml  arabic_morph_sample.toml
data/: .gitkeep  alakeel_dataset.json  fertility.json  test_10_activations.npy  test_10_stimuli.json  test_20_activations.npy  test_20_stimuli.json  test_2_stimuli.json  test_check_activations.npy  test_check_activations_correctness.json  test_stimuli_subset.json  thread_benchmarks_gemma4_e2b.json  thread_benchmarks_llama31_8b_smoke.json  thread_benchmarks_llama32_1b_3b.json  thread_benchmarks_qwen3_06b.json
docs/: CNAME  activation_reference_checks.md  artifact_contract.md  backend_validation.md  cloud_weekend_checklist.md  dataset_pipeline.md  ember-writeup.html  gemma4-parity-investigation.md  homepage.css  index-ar.html  index.ar.html  index.html  layer-dump-tooling.md  logits_external_smoke_notes.md  style.css  theme.js
paper/: main.tex
probes/: audit_probe_leakage.py  benchmark_summary.py  build_conllu_benchmark.py  causal_intervention.py  cca_analysis.py  check_golden_logits.py  compare_model_results.py  cross_model_geometry.py  divergence_analysis.py  extract_hf_encoder.py  golden_summary.py  heldout_incremental.py  mdl_probe.py  plot_layerwise.py  plot_results.py  plot_root_scale_comparison.py  render_benchmark_report.py  requirements.txt  rsa_analysis.py  run_all_5k.sh  run_baseline_probes.py  (+10 more)
src/: lib.rs  (+15 more)
(+153 files in other folders)
