[package]
name = "ember"
version = "0.1.0"
edition = "2021"

# [features]
#default = []
#server = ["dep:axum", "dep:tokio", "dep:tokio-stream"]
#rag = ["dep:fastembed-rs", "dep:instant-distance"]

[dependencies]
safetensors = "0.4"
tokenizers = "0.20"
thiserror = "1"
anyhow = "1"
memmap2 = "0.9"
libm = "0.2.16"
reqwest = { version = "0.12", features = ["json", "blocking"] }
