[package]
name = "ember"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokenizers = "0.20"
thiserror = "1"
anyhow = "1"
memmap2 = "0.9"
libm = "0.2.16"
reqwest = { version = "0.13.3", features = ["json", "blocking"] }
half = "2.7.1"
matrixmultiply = "0.3.10"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
