[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "arabic-morph-dataset"
version = "0.1.0"
description = "Local Arabic morphology dataset pipeline for probing and SFT data."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
dev = ["pytest>=8.0", "PyYAML>=6.0"]

[project.scripts]
arabic-morph-dataset = "arabic_morph_dataset.cli:entrypoint"

[tool.setuptools.packages.find]
where = ["src"]
